# Jarvis

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  package.json
backend/: .env.example  CHANGELOG.md  config.py  main.py  pyproject.toml  requirements.txt
backend/jarvis_backend.egg-info/: PKG-INFO  SOURCES.txt
backend/models/: database.py  schemas.py
backend/routers/: chat.py  connections.py  enrichment.py  graph.py  jira.py  local_models.py  mcp.py  memory.py  sessions.py  settings.py  specialists.py  workspace.py
backend/services/: _anthropic_client.py  _db.py  alias_index.py  chunking.py  claude.py  connection_events.py  connection_service.py  context_builder.py  council.py  embedding_service.py  enrichment_service.py  entity_extraction.py  graph_service.py  ingest.py  ingest_jobs.py  jira_ingest.py  llm_service.py  memory_service.py  ollama_service.py  planning_service.py  preference_service.py  retrieval.py  session_service.py  specialist_service.py  structured_ingest.py  token_tracking.py  tools.py  url_ingest.py  web_search.py  workspace_service.py
backend/tests/: conftest.py  test_chat_provider.py  test_chat_security.py  test_chat_ws.py  test_claude_service.py  test_config.py  test_connection_service_orphan.py  test_context_builder_expansion_budget.py  test_document_section_split.py  test_enrichment_pipeline.py  test_entity_extraction_en.py  test_entity_extraction_pl.py  test_graph_api.py  test_graph_edge_quality.py  test_graph_entity_expansion.py  test_graph_service.py  test_health.py  (+23 more)
(+229 files in other folders)
