[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-backend"
version = "0.2.0"
description = "Jarvis — voice-first personal memory system (backend)"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["."]
include = ["jarvis_backend*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
