[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-backend"
version = "0.4.0"
description = "Jarvis — An AI workspace that remembers what matters (backend)"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["."]
include = ["jarvis_backend*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
